--- a/Employee/src/main/resources/application.properties
+++ b/Employee/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/selfPrc
-spring.datasource.username=root
-spring.datasource.password=Pratul@51
+spring.datasource.username=<<your username>>
+spring.datasource.password=<<your password>>
 
 
 spring.jpa.hibernate.ddl-auto=update
